# cmake_cpp_template

./: .clang-tidy  CMakeLists.txt  README.md
srcs/: hello_world.cpp
tests/: test.cpp
